--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/DJAxel/nodejs-learning/issues"
   },
-  "homepage": "https://github.com/DJAxel/nodejs-learning#readme"
+  "homepage": "https://github.com/DJAxel/nodejs-learning#readme",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
